springboot2.3.5集成druid,多数据源，lombok,单元测试

--- a/development-platform-study-ui/src/main/ui/styles/module/home.css
+++ b/development-platform-study-ui/src/main/ui/styles/module/home.css
@@ -200,23 +200,15 @@ body {
     color: red;
 }
 
-/*实验-反馈上下滚动*/
-/*.marqueea {*/
-/*white-space: nowrap;*/
-/*overflow:-webkit-marquee;;*/
-/*width:170px;　*/
-/*-webkit-marquee-direction:left;　*/
-/*-webkit-marquee-speed:normal;　*/
-/*-webkit-marquee-style:scroll;*/
-/*-webkit-marquee-repetition:1;　*/
-/*}*/
 
 /*blue_part*/
 .blue_part {
+    font-size: 55px;
+    color: white;
     float: left;
     width: 100%;
     height: 81px;
-    background: #4496df url(../../images/home_bg.png) no-repeat 75% center;
+    background-color: #463c49;
 }
 
 /*-----个人模块样式-----*/
@@ -359,14 +351,6 @@ body {
     position: relative;
 }
 
-.pic_tip {
-    float: left;
-    background: url(../../images/girder/common/tip.png) no-repeat left center;
-    height: 40px;
-    background-size: contain;
-    padding-left: 40px;
-    position: relative;
-}
 
 .warn_tip {
     float: left;
@@ -619,7 +603,7 @@ body {
     width: 430px;
     height: 260px;
     border-radius: 11px;
-    background: url(../../images/home/reviewed_bg.png) no-repeat 0 0;
+    /*background: url(../../images/home/reviewed_bg.png) no-repeat 0 0;*/
     padding: 10px;
     margin: 5px 5px 5px auto;
 }
@@ -2308,499 +2292,6 @@ body {
     width: 100%;
 }
 
-/*单位业务*/
-.iconenterprise2123 {
-    background-image: url("../../images/menumap/declare/enterprise2123.png");
-}
-.iconenterprise2122 {
-    background-image: url("../../images/menumap/declare/enterprise2122.png");
-}
-.iconenterprise2121 {
-    background-image: url("../../images/menumap/declare/enterprise2121.png");
-}
-.iconenterprise2120 {
-    background-image: url("../../images/menumap/declare/enterprise2120.png");
-}
-.iconenterprise2101 {
-    background-image: url("../../images/menumap/declare/enterprise2101.png");
-}
-
-.iconenterprise2102 {
-    background-image: url("../../images/menumap/declare/enterprise2102.png");
-}
-
-.iconenterprise2103 {
-    background-image: url("../../images/menumap/declare/enterprise2103.png");
-}
-
-.iconenterprise2104 {
-    background-image: url("../../images/menumap/declare/enterprise2104.png");
-}
-
-.iconenterprise2105 {
-    background-image: url("../../images/menumap/declare/enterprise2105.png");
-}
-
-.iconenterprise2106 {
-    background-image: url("../../images/menumap/declare/enterprise2106.png");
-}
-
-.iconenterprise2107 {
-    background-image: url("../../images/menumap/declare/enterprise2107.png");
-}
-
-/*人员业务*/
-.iconenterprise2201 {
-    background-image: url("../../images/menumap/declare/enterprise2201.png");
-}
-
-.iconenterprise2202 {
-    background-image: url("../../images/menumap/declare/enterprise2202.png");
-}
-
-.iconenterprise2203 {
-    background-image: url("../../images/menumap/declare/enterprise2203.png");
-}
-
-.iconenterprise2204 {
-    background-image: url("../../images/menumap/declare/enterprise2204.png");
-}
-
-.iconenterprise2205 {
-    background-image: url("../../images/menumap/declare/enterprise2205.png");
-}
-
-.iconenterprise2207 {
-    background-image: url("../../images/menumap/declare/enterprise2207.png");
-}
-
-.iconenterprise2206 {
-    background-image: url("../../images/menumap/declare/enterprise2206.png");
-}
-
-.iconenterprise2208 {
-    background-image: url("../../images/menumap/declare/enterprise2208.png");
-}
-
-.iconenterprise2209 {
-    background-image: url("../../images/menumap/declare/enterprise2209.png");
-}
-
-.iconenterprise2210 {
-    background-image: url("../../images/menumap/declare/enterprise2210.png");
-}
-
-.iconenterprise2211 {
-    background-image: url("../../images/menumap/declare/enterprise2211.png");
-}
-
-.iconenterprise2212 {
-    background-image: url("../../images/menumap/declare/enterprise2212.png");
-}
-
-.iconenterprise2213 {
-    background-image: url("../../images/menumap/declare/enterprise2213.png");
-}
-
-.iconenterprise2214 {
-    background-image: url("../../images/menumap/declare/enterprise2214.png");
-}
-
-.iconenterprise2215 {
-    background-image: url("../../images/menumap/declare/enterprise2215.png");
-}
-
-.iconenterprise2216 {
-    background-image: url("../../images/menumap/declare/enterprise2216.png");
-}
-
-.iconenterprise2217 {
-    background-image: url("../../images/menumap/declare/enterprise2217.png");
-}
-
-.iconenterprise2219 {
-    background-image: url("../../images/menumap/declare/enterprise2219.png");
-}
-
-.iconenterprise2301 {
-    background-image: url("../../images/menumap/declare/enterprise2203.png");
-}
-
-.iconenterprise6404 {
-    background-image: url("../../images/menumap/declare/enterprise6404.png");
-}
-
-.iconenterprise2220 {
-    background-image: url("../../images/menumap/declare/enterprise2220.png");
-}
-
-.iconenterprise2221 {
-    background-image: url("../../images/menumap/declare/enterprise2221.png");
-}
-
-.iconenterprise2222 {
-    background-image: url("../../images/menumap/declare/enterprise2222.png");
-}
-
-.iconenterprise2223 {
-    background-image: url("../../images/menumap/declare/enterprise2223.png");
-}
-
-.iconenterprise2224 {
-    background-image: url("../../images/menumap/declare/enterprise2224.png");
-}
-
-.iconenterprise2225 {
-    background-image: url("../../images/menumap/declare/enterprise2225.png");
-}
-
-.iconenterprise2226 {
-    background-image: url("../../images/menumap/declare/enterprise2226.png");
-}
-
-.iconenterprise2227 {
-    background-image: url("../../images/menumap/declare/enterprise2227.png");
-}
-
-.iconenterprise2110 {
-    background-image: url("../../images/menumap/declare/enterprise2110.png");
-}
-
-.iconenterprise2229 {
-    background-image: url("../../images/menumap/declare/enterprise2229.png");
-}
-
-.iconenterprise2228 {
-    background-image: url("../../images/menumap/declare/enterprise2228.png");
-}
-
-.iconenterprise6206 {
-    background-image: url("../../images/menumap/declare/enterprise6206.png");
-}
-
-.iconenterprise6107 {
-    background-image: url("../../images/menumap/declare/enterprise6107.png");
-}
-
-.iconenterprise6108 {
-    background-image: url("../../images/menumap/declare/enterprise6108.png");
-}
-
-.iconenterprise6110 {
-    background-image: url("../../images/menumap/declare/enterprise6110.png");
-}
-
-.iconenterprise6111 {
-    background-image: url("../../images/menumap/declare/enterprise6111.png");
-}
-
-.iconenterprise6205 {
-    background-image: url("../../images/menumap/declare/enterprise6205.png");
-}
-
-.iconenterprise6112 {
-    background-image: url("../../images/menumap/declare/enterprise6112.png");
-}
-
-.iconenterprise6113 {
-    background-image: url("../../images/menumap/declare/enterprise6113.png");
-}
-
-.iconenterprise6114 {
-    background-image: url("../../images/menumap/declare/enterprise6114.png");
-}
-
-.iconenterprise6115 {
-    background-image: url("../../images/menumap/declare/enterprise6115.png");
-}
-
-.iconenterprise6116 {
-    background-image: url("../../images/menumap/declare/enterprise6116.png");
-}
-
-.iconenterprise6117 {
-    background-image: url("../../images/menumap/declare/enterprise6117.png");
-}
-
-.iconenterprise6118 {
-    background-image: url("../../images/menumap/declare/enterprise6118.png");
-}
-
-.iconenterprise6119 {
-    background-image: url("../../images/menumap/declare/enterprise6119.png");
-}
-
-.iconenterprise6120 {
-    background-image: url("../../images/menumap/declare/enterprise6120.png");
-}
-.iconenterprise6121 {
-    background-image: url("../../images/menumap/declare/enterprise6121.png");
-}
-.iconenterprise6122 {
-    background-image: url("../../images/menumap/declare/enterprise6122.png");
-}
-.iconenterprise6123 {
-    background-image: url("../../images/menumap/declare/enterprise6123.png");
-}
-.iconenterprise6124 {
-    background-image: url("../../images/menumap/declare/enterprise6124.png");
-}
-
-.iconenterprise6125 {
-    background-image: url("../../images/menumap/declare/enterprise6125.png");
-}
-
-
-.iconenterprise6207 {
-    background-image: url("../../images/menumap/declare/enterprise6207.png");
-}
-
-.iconenterprise6208 {
-    background-image: url("../../images/menumap/declare/enterprise6208.png");
-}
-
-.iconenterprise6209 {
-    background-image: url("../../images/menumap/declare/enterprise6209.png");
-}
-
-.iconenterprise6210 {
-    background-image: url("../../images/menumap/declare/enterprise6210.png");
-}
-
-.iconenterprise6211 {
-    background-image: url("../../images/menumap/declare/enterprise6211.png");
-}
-
-.iconenterprise6212 {
-    background-image: url("../../images/menumap/declare/enterprise6212.png");
-}
-
-.iconenterprise6213 {
-    background-image: url("../../images/menumap/declare/enterprise6213.png");
-}
-
-.iconenterprise6214 {
-    background-image: url("../../images/menumap/declare/enterprise6214.png");
-}
-
-.iconenterprise6216 {
-    background-image: url("../../images/menumap/declare/enterprise6216.png");
-}
-
-.iconenterprise6314 {
-    background-image: url("../../images/menumap/declare/enterprise6314.png");
-}
-
-.iconenterprise6315 {
-    background-image: url("../../images/menumap/declare/enterprise6315.png");
-}
-
-.iconenterprise6316 {
-    background-image: url("../../images/menumap/declare/enterprise6316.png");
-}
-
-.iconenterprise6317 {
-    background-image: url("../../images/menumap/declare/enterprise6317.png");
-}
-.iconenterprise6318 {
-    background-image: url("../../images/menumap/declare/enterprise6318.png");
-}
-
-.iconenterprise6405 {
-    background-image: url("../../images/menumap/declare/enterprise6405.png");
-}
-
-.iconenterprise6406 {
-    background-image: url("../../images/menumap/declare/enterprise6406.png");
-}
-
-.iconenterprise6407 {
-    background-image: url("../../images/menumap/declare/enterprise6407.png");
-}
-
-.iconenterprise6408 {
-    background-image: url("../../images/menumap/declare/enterprise6408.png");
-}
-
-.iconenterprise6409 {
-    background-image: url("../../images/menumap/declare/enterprise6409.png");
-}
-
-.iconenterprise6410 {
-    background-image: url("../../images/menumap/declare/enterprise6410.png");
-}
-
-.iconenterprise6411 {
-    background-image: url("../../images/menumap/declare/enterprise6411.png");
-}
-
-.iconenterprise6412 {
-    background-image: url("../../images/menumap/declare/enterprise6412.png");
-}
-
-.iconenterprise6413 {
-    background-image: url("../../images/menumap/declare/enterprise6413.png");
-}
-
-.iconenterprise6414 {
-    background-image: url("../../images/menumap/declare/enterprise6414.png");
-}
-
-.iconenterprise6415 {
-    background-image: url("../../images/menumap/declare/enterprise6413.png");
-}
-
-.iconenterprise6416 {
-    background-image: url("../../images/menumap/declare/enterprise6407.png");
-}
-
-.iconenterprise6417 {
-    background-image: url("../../images/menumap/declare/enterprise6406.png");
-}
-
-
-.iconenterprise6418 {
-    background-image: url("../../images/menumap/declare/enterprise6211.png");
-}
-
-.iconenterprise6419 {
-    background-image: url("../../images/menumap/declare/enterprise6419.png");
-}
-
-.iconenterprise6420 {
-    background-image: url("../../images/menumap/declare/enterprise6420.png");
-}
-.iconenterprise6109 {
-    background-image: url("../../images/menumap/declare/enterprise6109.png");
-}
-
-.iconenterprise2111 {
-    background-image: url("../../images/menumap/declare/enterprise2111.png");
-}
-
-.iconenterprise2230 {
-    background-image: url("../../images/menumap/declare/enterprise2201.png");
-}
-
-/*一网通办单位业务*/
-.iconenterprise2112 {
-    background-image: url("../../images/menumap/declare/enterprise2112.png");
-}
-
-.iconenterprise2113 {
-    background-image: url("../../images/menumap/declare/enterprise2113.png");
-}
-
-.iconenterprise2114 {
-    background-image: url("../../images/menumap/declare/enterprise2114.png");
-}
-
-.iconenterprise2115 {
-    background-image: url("../../images/menumap/declare/enterprise2115.png");
-}
-.iconenterprise2116 {
-    background-image: url("../../images/menumap/declare/enterprise2116.png");
-}
-.iconenterprise2117 {
-    background-image: url("../../images/menumap/declare/enterprise2117.png");
-}
-
-/*一网通办人员业务*/
-.iconenterprise8201 {
-    background-image: url("../../images/menumap/declare/enterprise8201.png");
-}
-
-.iconenterprise8202 {
-    background-image: url("../../images/menumap/declare/enterprise8202.png");
-}
-
-.iconenterprise8203 {
-    background-image: url("../../images/menumap/declare/enterprise8203.png");
-}
-
-.iconenterprise8204 {
-    background-image: url("../../images/menumap/declare/enterprise8204.png");
-}
-
-.iconenterprise8205 {
-    background-image: url("../../images/menumap/declare/enterprise8205.png");
-}
-
-.iconenterprise8206 {
-    background-image: url("../../images/menumap/declare/enterprise8206.png");
-}
-
-.iconenterprise2231 {
-    background-image: url("../../images/menumap/declare/enterprise2231.png");
-}
-
-.iconenterprise2232 {
-    background-image: url("../../images/menumap/declare/enterprise2232.png");
-}
-
-.iconenterprise2233 {
-    background-image: url("../../images/menumap/declare/enterprise2233.png");
-}
-
-.iconenterprise2234 {
-    background-image: url("../../images/menumap/declare/enterprise2234.png");
-}
-
-.iconenterprise2235 {
-    background-image: url("../../images/menumap/declare/enterprise2235.png");
-}
-
-.iconenterprise2236 {
-    background-image: url("../../images/menumap/declare/enterprise2236.png");
-}
-
-.iconenterprise2237 {
-    background-image: url("../../images/menumap/declare/enterprise2237.png");
-}
-
-.iconenterprise2238 {
-    background-image: url("../../images/menumap/declare/enterprise2238.png");
-}
-
-.iconenterprise2239 {
-    background-image: url("../../images/menumap/declare/enterprise2239.png");
-}
-
-.iconenterprise2240 {
-    background-image: url("../../images/menumap/declare/enterprise2240.png");
-}
-
-.iconenterprise2241 {
-    background-image: url("../../images/menumap/declare/enterprise2241.png");
-}
-
-.iconenterprise2242 {
-    background-image: url("../../images/menumap/declare/enterprise2242.png");
-}
-
-.iconenterprise2244 {
-    background-image: url("../../images/menumap/declare/enterprise2244.png");
-}
-
-.iconenterprise2245 {
-    background-image: url("../../images/menumap/declare/enterprise2245.png");
-}
-
-.iconenterprise9114 {
-    background-image: url("../../images/menumap/declare/enterprise9114.png");
-}
-.iconenterprise2246 {
-    background-image: url("../../images/menumap/declare/enterprise2246.png");
-}
-.iconenterprise2247 {
-    background-image: url("../../images/menumap/declare/enterprise2247.png");
-}
-.iconenterprise2248 {
-    background-image: url("../../images/menumap/declare/enterprise2248.png");
-}
-.iconenterprise2249 {
-    background-image: url("../../images/menumap/declare/enterprise2249.png");
-}
 .icon_add {
     cursor: pointer;
     background-image: url("../../images/home/icon_add.png");
